# Mini-NotebookLM

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PROJECT_PLAN.md
docs/output_prompt/: APP_LAUNCHER_FIX_REVIEW.md  CUDA_PYTORCH_ENV_REVIEW.md  EMBEDDING_DEVICE_UI_OPTION_REVIEW.md  PHASE_00_REPO_SCAFFOLD_PLAN.md  PHASE_02_IMPLEMENTATION_REVIEW_DIGEST.md  PHASE_02_RETRIEVAL_PLAN_REVIEW.md  PHASE_03_IMPLEMENTATION_REVIEW_DIGEST.md  PHASE_03_QA_CHAT_PLAN_REVIEW.md  PHASE_04_IMPLEMENTATION_REVIEW_DIGEST.md  PHASE_04_SUMMARY_PLAN_REVIEW.md  PHASE_05_EVALUATION_MLFLOW_PLAN_REVIEW.md  PHASE_05_IMPLEMENTATION_REVIEW_DIGEST.md  STREAMLIT_WATCHER_CONFIG_FIX.md
examples/: README.md  sample_eval_cases.json  sample_notes.md
scripts/: check_cuda.py
tests/: __init__.py  test_bm25_store.py  test_chat_repository.py  test_chat_service.py  test_chunker.py  test_citations.py  test_document_repository.py  test_embedding_device.py  test_embedding_device_ui.py  test_embedding_wrapper.py  test_evaluation_import_export.py  test_evaluation_metrics.py  test_evaluation_repository.py  test_evaluation_runner.py  test_export_learning_artifacts.py  test_faiss_store.py  test_hybrid_retrieval.py  test_ingestion_service.py  test_learning_parsing.py  test_learning_prompts.py  test_learning_service.py  test_learning_validation.py  test_markdown_parser.py  test_mlflow_logger.py  test_openai_client.py  test_pdf_parser.py  test_prompt_construction.py  test_qa_service.py  test_query_rewrite.py  test_retrieval_service.py  test_scaffold.py  test_source_mapping.py  test_storage_paths.py  test_storage_sqlite.py  test_summary_service.py  test_ui_imports.py  test_workspace_repository.py
(+69 files in other folders)
