[project]
name = "mini-notebooklm-rag"
version = "0.1.0"
description = "Local-first NotebookLM-like RAG application for learning and portfolio use."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faiss-cpu",
    "markdown-it-py",
    "openai",
    "pydantic-settings",
    "pymupdf",
    "rank-bm25",
    "sentence-transformers",
    "streamlit",
    "torch",
]

[project.scripts]
app = "mini_notebooklm_rag.app:main"

[project.optional-dependencies]
observability = [
    "mlflow",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
